--- a/studio/package.json
+++ b/studio/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "twitterblockchain",
+  "name": "twitter-blockchain",
   "private": true,
   "version": "1.0.0",
   "description": "",
   "main": "package.json",
-  "author": "Sandra Ashipala <sajustsmile@live.com>",
+  "author": "Sandra Ashipala <sajustsmile@gmail.com>",
   "license": "UNLICENSED",
   "scripts": {
     "start": "sanity start",
