--- a/smart_contract/package.json
+++ b/smart_contract/package.json
@@ -10,5 +10,9 @@
   },
   "dependencies": {
     "@openzeppelin/contracts": "^4.5.0"
+  },
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "hardhat compile"
   }
 }
