--- a/client/package.json
+++ b/client/package.json
@@ -6,6 +6,7 @@
     "start": "next start"
   },
   "dependencies": {
+    "@babel/core": "7.0.0",
     "@emotion/react": "^11.8.2",
     "@pinata/ipfs-gateway-tools": "^1.2.0",
     "@sanity/client": "^3.3.0",
@@ -17,7 +18,8 @@
     "react-icons": "^4.3.1",
     "react-modal": "^3.14.4",
     "react-spinners": "^0.11.0",
-    "timeago.js": "^4.0.2"
+    "timeago.js": "^4.0.2",
+    "vercel": "^24.0.1"
   },
   "devDependencies": {
     "@types/node": "17.0.4",
