--- a/client/package.json
+++ b/client/package.json
@@ -3,7 +3,8 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "lint": "next lint"
   },
   "dependencies": {
     "@babel/core": "7.0.0",
@@ -13,6 +14,7 @@
     "axios": "^0.26.1",
     "ethers": "^5.6.2",
     "next": "latest",
+    "node-fetch": "*",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
@@ -25,6 +27,8 @@
     "@types/node": "17.0.4",
     "@types/react": "17.0.38",
     "autoprefixer": "^10.4.0",
+    "eslint": "8.12.0",
+    "eslint-config-next": "12.1.1",
     "postcss": "^8.4.5",
     "prettier": "^2.5.1",
     "prettier-plugin-tailwindcss": "^0.1.1",
