--- a/client/package.json
+++ b/client/package.json
@@ -4,7 +4,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "export": "npm run build && next export"
   },
   "dependencies": {
     "@babel/core": "7.0.0",
@@ -21,7 +22,6 @@
     "react-modal": "^3.14.4",
     "react-spinners": "^0.11.0",
     "timeago.js": "^4.0.2",
-    "vercel": "^24.0.1"
   },
   "devDependencies": {
     "@types/node": "17.0.4",
