--- a/client/package.json
+++ b/client/package.json
@@ -22,6 +22,7 @@
     "react-modal": "^3.14.4",
     "react-spinners": "^0.11.0",
     "timeago.js": "^4.0.2",
+    "vercel": "^24.0.1"
   },
   "devDependencies": {
     "@types/node": "17.0.4",
