--- a/client/package.json
+++ b/client/package.json
@@ -1,33 +1,42 @@
 {
   "private": true,
   "scripts": {
-    "dev": "next dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "export": "npm run build && next export"
+    "export": "npm run build && next export",
+    "dev": "node server.js",
+    "prod_start": "cross-env NODE_ENV=production node server.js"
   },
   "dependencies": {
+    "@alch/alchemy-web3": "^1.2.3",
     "@babel/core": "7.0.0",
     "@emotion/react": "^11.8.2",
     "@pinata/ipfs-gateway-tools": "^1.2.0",
     "@sanity/client": "^3.3.0",
+    "@types/react-modal": "^3.13.1",
     "axios": "^0.26.1",
+    "dotenv": "^16.0.0",
     "ethers": "^5.6.2",
     "next": "latest",
+    "nft.storage": "^6.0.0",
     "node-fetch": "*",
+    "process": "^0.11.10",
+    "querystring": "^0.2.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
     "react-modal": "^3.14.4",
     "react-spinners": "^0.11.0",
     "timeago.js": "^4.0.2",
-    "vercel": "^24.0.1"
+    "vercel": "^24.0.1",
+    "web3": "^1.7.0"
   },
   "devDependencies": {
     "@types/node": "17.0.4",
     "@types/react": "17.0.38",
     "autoprefixer": "^10.4.0",
+    "cross-env": "^7.0.3",
     "eslint": "8.12.0",
     "eslint-config-next": "12.1.1",
     "postcss": "^8.4.5",
