--- a/client/package.json
+++ b/client/package.json
@@ -16,6 +16,7 @@
     "@sanity/client": "^3.3.0",
     "@types/react-modal": "^3.13.1",
     "axios": "^0.26.1",
+    "cors": "^2.8.5",
     "dotenv": "^16.0.0",
     "ethers": "^5.6.2",
     "next": "latest",
